deploy: 4bf84d337cc14f29f8ca2319d092f6a393f6cd71

--- a/notes/go/advance/gomod/index.html
+++ b/notes/go/advance/gomod/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Advance</title>
+<title>go mod</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="Advance">
+<meta property="og:title" content="go mod">
 <meta property="og:description" content="go get 下载指定版本 go get github.com/ormissia/go-opv@v0.0.2     ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://ormissia.github.io/notes/go/advance/gomod/"><meta property="article:section" content="notes">
@@ -63,8 +63,8 @@ Ormissia's Blog</a>
 <li>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
 <ul class=active>
-<li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
-<li><a class=active href=/notes/go/advance/gomod/ title=Advance>Advance</a></li>
+<li><a href=/notes/go/advance/time/ title=time>time</a></li>
+<li><a class=active href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
 </ul>
 </li>
 </ul>
