--- a/notes/go/basic/basic/index.html
+++ b/notes/go/basic/basic/index.html
@@ -29,7 +29,7 @@
 4Byte / 8Byte 与 uint 一样大小 float32
 4Byte float64
 8Byte string
-1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）     ">
+1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）     切片拼接 slice1 := []int{0, 1, 2, 3} slice2 := []int{3, 4, 5} slice1 = append(slice1, slice2.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://ormissia.github.io/notes/go/basic/basic/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
@@ -79,8 +79,8 @@ Ormissia's Blog</a>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
 <ul>
-<li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
-<li><a href=/notes/go/advance/gomod/ title=Advance>Advance</a></li>
+<li><a href=/notes/go/advance/time/ title=time>time</a></li>
+<li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
 </ul>
 </li>
 </ul>
@@ -204,6 +204,21 @@ Ormissia's Blog</a>
 </code></pre><p><code>string</code></p>
 <pre><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
 </code></pre></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>切片拼接</span></h5>
+<div class=card>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>slice1</span> <span style=color:#f92672>:=</span> []<span style=color:#66d9ef>int</span>{<span style=color:#ae81ff>0</span>, <span style=color:#ae81ff>1</span>, <span style=color:#ae81ff>2</span>, <span style=color:#ae81ff>3</span>}
+<span style=color:#a6e22e>slice2</span> <span style=color:#f92672>:=</span> []<span style=color:#66d9ef>int</span>{<span style=color:#ae81ff>3</span>, <span style=color:#ae81ff>4</span>, <span style=color:#ae81ff>5</span>}
+
+<span style=color:#a6e22e>slice1</span> = append(<span style=color:#a6e22e>slice1</span>, <span style=color:#a6e22e>slice2</span><span style=color:#f92672>...</span>)
+<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Println</span>(<span style=color:#a6e22e>slice1</span>)
+
+<span style=color:#75715e>//[0 1 2 3 3 4 5]
+</span></code></pre></div></div>
 </div>
 </div>
 </div>
