--- a/notes/algorithm/basic/index.html
+++ b/notes/algorithm/basic/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Basic</title>
+<title>Basics</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,10 +12,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="Basic">
-<meta property="og:description" content="函数     ">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://ormissia.github.io/notes/python/basic/basic/"><meta property="article:section" content="notes">
+<meta property="og:title" content="Basics">
+<meta property="og:description" content>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ormissia.github.io/notes/algorithm/basic/">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -92,12 +92,12 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/python/>Python</a>
-<ul class=active>
+<i class="fas fa-plus-circle"></i><a href=/notes/python/>Python</a>
+<ul>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/python/basic/>Basic</a>
-<ul class=active>
-<li><a class=active href=/notes/python/basic/basic/ title=Basic>Basic</a></li>
+<i class="fas fa-plus-circle"></i><a href=/notes/python/basic/>Basic</a>
+<ul>
+<li><a href=/notes/python/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 </ul>
@@ -143,11 +143,11 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/>Algorithm</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/algorithm/>Algorithm</a>
+<ul class=active>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/basic/>Basics</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/algorithm/basic/>Basics</a>
+<ul class=active>
 <li><a href=/notes/algorithm/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
@@ -164,12 +164,37 @@ Ormissia's Blog</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>函数</span></h5>
+<h5 class=note-title><span>异或</span></h5>
 <div class=card>
-<div class=card-body></div>
+<div class=card-body><ul>
+<li>异或运算法则：无进位相加</li>
+<li>异或运算性质：
+<ul>
+<li>0 ^ N = N</li>
+<li>N ^ N = 0</li>
+<li>满足交换律和结合律</li>
+</ul>
+</li>
+</ul>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;%b&#34;</span>,<span style=color:#a6e22e>a</span>^<span style=color:#a6e22e>b</span>)
+<span style=color:#75715e>//101
+</span></code></pre></div><p>简单应用：不申请额外内存交换两个变量的值</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+
+<span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span>
+<span style=color:#a6e22e>b</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//b = (a ^ b) ^ b = a
+</span><span style=color:#75715e></span><span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//a = (a ^ b) ^ a = b
+</span><span style=color:#75715e></span><span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;a:%b,b:%b&#34;</span>, <span style=color:#a6e22e>a</span>, <span style=color:#a6e22e>b</span>)
+<span style=color:#75715e>//a:1001,b:1100
+</span></code></pre></div></div>
 </div>
 </div>
 </div>
+</div>
+<div class=paginator>
 </div>
 </div>
 </section>
