--- a/notes/sql/dml/dml/index.html
+++ b/notes/sql/dml/dml/index.html
@@ -143,6 +143,17 @@ Ormissia's Blog</a>
 </li>
 </ul>
 </li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/>Algorithm</a>
+<ul>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/basic/>Basics</a>
+<ul>
+<li><a href=/notes/algorithm/basic/basic/ title=Basic>Basic</a></li>
+</ul>
+</li>
+</ul>
+</li>
 </div>
 </ul>
 </div>
