--- a/notes/go/algorithm/basic/index.html
+++ b/notes/go/algorithm/basic/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Basics</title>
+<title>Basic</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,10 +12,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="Basics">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://ormissia.github.io/notes/algorithm/basic/">
+<meta property="og:title" content="Basic">
+<meta property="og:description" content="异或  异或运算法则：无进位相加 异或运算性质：  0 ^ N = N N ^ N = 0 满足交换律和结合律    a := 0b1100 b := 0b1001 fmt.Printf(&#34;%b&#34;,a^b) //101 简单应用：不申请额外内存交换两个变量的值
+a := 0b1100 b := 0b1001 a = a ^ b b = a ^ b //b = (a ^ b) ^ b = a a = a ^ b //a = (a ^ b) ^ a = b fmt.Printf(&#34;a:%b,b:%b&#34;, a, b) //a:1001,b:1100     ">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://ormissia.github.io/notes/go/algorithm/basic/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -52,8 +53,8 @@ Ormissia's Blog</a>
 <li id=list-heading><a href=/notes data-filter=all>笔记</a></li>
 <div class=subtree>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/go/>Go</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/>Go</a>
+<ul class=active>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/basic/>Basics</a>
 <ul>
@@ -65,6 +66,12 @@ Ormissia's Blog</a>
 <ul>
 <li><a href=/notes/go/advance/time/ title=time>time</a></li>
 <li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
+</ul>
+</li>
+<li>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/algorithm/>Algorithm</a>
+<ul class=active>
+<li><a class=active href=/notes/go/algorithm/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 </ul>
@@ -142,17 +149,6 @@ Ormissia's Blog</a>
 </li>
 </ul>
 </li>
-<li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/algorithm/>Algorithm</a>
-<ul class=active>
-<li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/algorithm/basic/>Basics</a>
-<ul class=active>
-<li><a href=/notes/algorithm/basic/basic/ title=Basic>Basic</a></li>
-</ul>
-</li>
-</ul>
-</li>
 </div>
 </ul>
 </div>
@@ -193,8 +189,6 @@ Ormissia's Blog</a>
 </div>
 </div>
 </div>
-</div>
-<div class=paginator>
 </div>
 </div>
 </section>
