--- a/notes/index.html
+++ b/notes/index.html
@@ -67,6 +67,12 @@ Ormissia's Blog</a>
 <li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
 </ul>
 </li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/go/algorithm/>Algorithm</a>
+<ul>
+<li><a href=/notes/go/algorithm/basic/ title=Basic>Basic</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li>
@@ -142,17 +148,6 @@ Ormissia's Blog</a>
 </li>
 </ul>
 </li>
-<li>
-<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/>Algorithm</a>
-<ul>
-<li>
-<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/basic/>Basics</a>
-<ul>
-<li><a href=/notes/algorithm/basic/basic/ title=Basic>Basic</a></li>
-</ul>
-</li>
-</ul>
-</li>
 </div>
 </ul>
 </div>
@@ -162,37 +157,6 @@ Ormissia's Blog</a>
 <section class=content-section id=content-section>
 <div class="content container-fluid" id=content>
 <div class="container-fluid note-card-holder" id=note-card-holder>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>异或</span></h5>
-<div class=card>
-<div class=card-body><ul>
-<li>异或运算法则：无进位相加</li>
-<li>异或运算性质：
-<ul>
-<li>0 ^ N = N</li>
-<li>N ^ N = 0</li>
-<li>满足交换律和结合律</li>
-</ul>
-</li>
-</ul>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
-<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
-<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;%b&#34;</span>,<span style=color:#a6e22e>a</span>^<span style=color:#a6e22e>b</span>)
-<span style=color:#75715e>//101
-</span></code></pre></div><p>简单应用：不申请额外内存交换两个变量的值</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
-<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
-
-<span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span>
-<span style=color:#a6e22e>b</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//b = (a ^ b) ^ b = a
-</span><span style=color:#75715e></span><span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//a = (a ^ b) ^ a = b
-</span><span style=color:#75715e></span><span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;a:%b,b:%b&#34;</span>, <span style=color:#a6e22e>a</span>, <span style=color:#a6e22e>b</span>)
-<span style=color:#75715e>//a:1001,b:1100
-</span></code></pre></div></div>
-</div>
-</div>
-</div>
 <div class=note-card>
 <div class=item>
 <h5 class=note-title><span>基础类型内存宽度以及表示范围</span></h5>
@@ -319,6 +283,37 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>go get github.com/ormissia/go-opv@v0.0.2
 </code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>异或</span></h5>
+<div class=card>
+<div class=card-body><ul>
+<li>异或运算法则：无进位相加</li>
+<li>异或运算性质：
+<ul>
+<li>0 ^ N = N</li>
+<li>N ^ N = 0</li>
+<li>满足交换律和结合律</li>
+</ul>
+</li>
+</ul>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;%b&#34;</span>,<span style=color:#a6e22e>a</span>^<span style=color:#a6e22e>b</span>)
+<span style=color:#75715e>//101
+</span></code></pre></div><p>简单应用：不申请额外内存交换两个变量的值</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+
+<span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span>
+<span style=color:#a6e22e>b</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//b = (a ^ b) ^ b = a
+</span><span style=color:#75715e></span><span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//a = (a ^ b) ^ a = b
+</span><span style=color:#75715e></span><span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;a:%b,b:%b&#34;</span>, <span style=color:#a6e22e>a</span>, <span style=color:#a6e22e>b</span>)
+<span style=color:#75715e>//a:1001,b:1100
+</span></code></pre></div></div>
 </div>
 </div>
 </div>
