--- a/notes/linux/tool/vi/index.html
+++ b/notes/linux/tool/vi/index.html
@@ -74,6 +74,12 @@ Ormissia's Blog</a>
 <li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
 </ul>
 </li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/go/algorithm/>Algorithm</a>
+<ul>
+<li><a href=/notes/go/algorithm/basic/ title=Basic>Basic</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li>
@@ -145,17 +151,6 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/tool/>Tool</a>
 <ul class=active>
 <li><a class=active href=/notes/linux/tool/vi/ title=vi>vi</a></li>
-</ul>
-</li>
-</ul>
-</li>
-<li>
-<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/>Algorithm</a>
-<ul>
-<li>
-<i class="fas fa-plus-circle"></i><a href=/notes/algorithm/basic/>Basics</a>
-<ul>
-<li><a href=/notes/algorithm/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 </ul>
