--- a/notes/go/algorithm/basic/index.html
+++ b/notes/go/algorithm/basic/index.html
@@ -14,7 +14,7 @@
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
 <meta property="og:title" content="Basic">
 <meta property="og:description" content="异或  异或运算法则：无进位相加 异或运算性质：  0 ^ N = N N ^ N = 0 满足交换律和结合律    a := 0b1100 b := 0b1001 fmt.Printf(&#34;%b&#34;,a^b) //101 简单应用：不申请额外内存交换两个变量的值
-a := 0b1100 b := 0b1001 a = a ^ b b = a ^ b //b = (a ^ b) ^ b = a a = a ^ b //a = (a ^ b) ^ a = b fmt.Printf(&#34;a:%b,b:%b&#34;, a, b) //a:1001,b:1100     ">
+a := 0b1100 b := 0b1001 a = a ^ b b = a ^ b //b = (a ^ b) ^ b = a a = a ^ b //a = (a ^ b) ^ a = b fmt.Printf(&#34;a:%b,b:%b&#34;, a, b) //a:1001,b:1100     堆  堆的实质是一棵完全二叉树">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://ormissia.github.io/notes/go/algorithm/basic/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
@@ -186,6 +186,28 @@ Ormissia's Blog</a>
 </span><span style=color:#75715e></span><span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;a:%b,b:%b&#34;</span>, <span style=color:#a6e22e>a</span>, <span style=color:#a6e22e>b</span>)
 <span style=color:#75715e>//a:1001,b:1100
 </span></code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>堆</span></h5>
+<div class=card>
+<div class=card-body><blockquote>
+<p>堆的实质是一棵完全二叉树</p>
+</blockquote>
+<p>堆可分为两种类型：</p>
+<ul>
+<li>大根堆：所有子树的根节点均为最大值</li>
+<li>小根堆：所有子树的根节点均为最小值</li>
+</ul>
+<p>一般情况下堆可以用一个有序数组来存储<br>
+[0&mldr;i&mldr;n]
+<code>i</code>节点的左孩子<code>index</code>为<code>2*i+1</code>，右孩子为<code>2i+2</code>，父节点为<code>(i-1)/2</code></p>
+<p>也有一种特例是从1开始(位运算比加减法快)<br>
+[01&mldr;i&mldr;n]
+<code>i</code>节点的左孩子<code>index</code>为<code>2*i</code>即<code>i&lt;&lt;1</code>，右孩子为<code>2i+1</code>即<code>i&lt;&lt;1|1</code>，父节点为<code>i/2</code></p>
+</div>
 </div>
 </div>
 </div>
