deploy: 37baaf9929258d0e22e635e5ae0c25c7cdb43998

--- a/notes/go/algorithm/index.html
+++ b/notes/go/algorithm/index.html
@@ -206,6 +206,36 @@ Ormissia's Blog</a>
 <p>也有一种特例是从1开始(位运算比加减法快)<br>
 [01&mldr;i&mldr;n]
 <code>i</code>节点的左孩子<code>index</code>为<code>2*i</code>即<code>i&lt;&lt;1</code>，右孩子为<code>2i+1</code>即<code>i&lt;&lt;1|1</code>，父节点为<code>i/2</code></p>
+<ul>
+<li>堆的基本操作：
+<ul>
+<li>上浮</li>
+<li>下沉</li>
+</ul>
+</li>
+<li>堆的插入弹出
+<ul>
+<li>插入
+<ol>
+<li>在最后插入节点</li>
+<li>依次上浮</li>
+</ol>
+</li>
+<li>弹出
+<ol>
+<li>弹出根节点</li>
+<li>将最后一个节点放入根节点</li>
+<li>将根节点下沉</li>
+</ol>
+</li>
+</ul>
+</li>
+<li>堆排序
+<ul>
+<li>依次弹出根节点</li>
+</ul>
+</li>
+</ul>
 </div>
 </div>
 </div>
