deploy: 2bfca57dc03291d9ca840500d82d1cb3414893ca

--- a/notes/go/index.html
+++ b/notes/go/index.html
@@ -138,6 +138,7 @@ Ormissia's Blog</a>
 <ul>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
@@ -281,7 +282,7 @@ Ormissia's Blog</a>
 <div class=item>
 <h5 class=note-title><span>go get 下载指定版本</span></h5>
 <div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>go get github.com/ormissia/go-opv@v0.0.2
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>go get github.com/ormissia/go-opv@v0.0.2
 </code></pre></div></div>
 </div>
 </div>
