--- a/notes/linux/shell/index.html
+++ b/notes/linux/shell/index.html
@@ -138,6 +138,7 @@ Ormissia's Blog</a>
 <ul class=active>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
@@ -188,7 +189,7 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>cat</span></h5>
 <div class=card>
 <div class=card-body><p>在<code>cat</code>输出时候显示行数</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>cat -n maim.go
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>cat -n maim.go
 </code></pre></div></div>
 </div>
 </div>
@@ -199,11 +200,11 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><p>统计文件行、单词、字符数量
 格式：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>usage: wc <span style=color:#f92672>[</span>-clmw<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>file ...<span style=color:#f92672>]</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>usage: wc <span style=color:#f92672>[</span>-clmw<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>file ...<span style=color:#f92672>]</span>
 </code></pre></div><p>统计<code>main.go</code>的行、单词、字符数量</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>wc main.go
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>wc main.go
 </code></pre></div><p>选项：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>-l 统计行数
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>-l 统计行数
 -c 统计字符数
 -w 统计单词数
 -L 统计最长的行的字符数
@@ -217,9 +218,9 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><p>简单的文件传输工具</p>
 <p>接收方</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nc -l <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &gt; filename
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>nc -l <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &gt; filename
 </code></pre></div><p>发送方</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nc <span style=color:#f92672>[</span>ip<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &lt; filename
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>nc <span style=color:#f92672>[</span>ip<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &lt; filename
 </code></pre></div></div>
 </div>
 </div>
@@ -241,9 +242,9 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><p><code>xargs</code>是给命令传递参数的一个过滤器，可以将管道或标准输入（stdin）数据转换成命令行参数，也能够从文件的输出中读取数据，一般是和管道一起使用。
 格式:</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>somecommand | xargs <span style=color:#f92672>[</span>-item<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>command<span style=color:#f92672>]</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>somecommand | xargs <span style=color:#f92672>[</span>-item<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>command<span style=color:#f92672>]</span>
 </code></pre></div><p>选项：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>-a file 从文件中读入作为 stdin
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>-a file 从文件中读入作为 stdin
 -e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。
 -p 当每次执行一个argument的时候询问一次用户。
 -n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。
@@ -256,6 +257,118 @@ Ormissia's Blog</a>
 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。
 -x exit的意思，主要是配合-s使用。。
 </code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>脚本执行方式</span></h5>
+<div class=card>
+<div class=card-body><ol>
+<li>需要可执行权限
+<ul>
+<li>相对路径执行</li>
+<li>绝对路径执行</li>
+</ul>
+</li>
+<li>不需要可执行权限
+<ul>
+<li><code>sh 脚本文件名</code></li>
+<li><code>source 脚本文件名</code> // 不会启动子进程，通过<code>pstree</code>查看进程树</li>
+</ul>
+</li>
+</ol>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>定义变量</span></h5>
+<div class=card>
+<div class=card-body><ul>
+<li>定义变量：<code>变量名=变量值</code></li>
+<li>取消变量：<code>unset 变量名</code></li>
+<li>注意事项：
+<ul>
+<li><code>=</code>两边不能有空格</li>
+<li>不能使用关键字做变量名，如：<code>ls</code>、<code>cd</code>等</li>
+<li>如果变量名已存在，则会覆盖之前的变量值</li>
+<li>变量名称由字母、数字、下划线组成，不能以数字开头</li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>变量类型</span></h5>
+<div class=card>
+<div class=card-body><ul>
+<li>环境变量：变量名通常大写，由操作系统维护</li>
+<li>位置变量：shell内置变量，存储脚本执行时的参数
+<ul>
+<li>使用<code>$n</code>表示，<code>n</code>为数字序列号：<code>$1</code>、<code>$2</code>、&mldr;、<code>${10}</code>、<code>${11}</code>、&mldr;</li>
+</ul>
+</li>
+<li>预定义变量：shell内置变量，可以直接调用但是不能赋值或修改'
+<ul>
+<li><code>$0</code>：存储所在的进程或脚本名</li>
+<li><code>$$</code>：当前进程的<code>PID</code>号</li>
+<li><code>$?</code>：命令执行后的返回状态，0-正常，其他-异常</li>
+<li><code>$#</code>：已加载的位置变量的个数</li>
+<li><code>$*</code>：所有位置变量的值</li>
+</ul>
+</li>
+<li>自定义变量：用户自主设置</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>多种引号的区别</span></h5>
+<div class=card>
+<div class=card-body><ul>
+<li>双引号：允许扩展，以<code>$</code>引用其他变量</li>
+<li>单引号：禁用扩展，将<code>$</code>视为普通字符</li>
+<li>反引号：将命令执行的输出作为变量值，<code>$()</code>与反引号等效</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>变量的作用范围</span></h5>
+<div class=card>
+<div class=card-body><ul>
+<li>局部变量：新定义的变量默认只在当前Shell中有效，无法在子Shell环境中使用</li>
+<li>全局变量：在当前Shell以及子Shell中均有效（<code>export a=1</code>：定义全局变量<code>a</code>）</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>read标准输入取值</span></h5>
+<div class=card>
+<div class=card-body><p><code>read</code>从键盘读入变量值完成赋值</p>
+<ul>
+<li>格式：<code>read [参数] [变量名]</code></li>
+<li>参数：
+<ul>
+<li><code>-p</code>：提示信息</li>
+<li><code>-t</code>：指定超时秒数</li>
+<li><code>-s</code>：设置是否在终端显示输入的内容</li>
+</ul>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
