--- a/notes/linux/tool/index.html
+++ b/notes/linux/tool/index.html
@@ -138,6 +138,7 @@ Ormissia's Blog</a>
 <ul>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
@@ -197,7 +198,7 @@ Ormissia's Blog</a>
 </div>
 <div class=card>
 <div class=card-body><p>将某一行作为<code>shell</code>命令执行</p>
-<pre><code>:62 w !bash //将会把第62行的内容作为bash命令来执行并显示结果，而且不会改变当前编辑的文件的内容
+<pre><code>:62 w !shell //将会把第62行的内容作为shell命令来执行并显示结果，而且不会改变当前编辑的文件的内容
 </code></pre></div>
 </div>
 </div>
