--- a/notes/linux/shell/basic/index.html
+++ b/notes/linux/shell/basic/index.html
@@ -151,6 +151,7 @@ Ormissia's Blog</a>
 <ul class=active>
 <li><a class=active href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
@@ -201,7 +202,7 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>cat</span></h5>
 <div class=card>
 <div class=card-body><p>在<code>cat</code>输出时候显示行数</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>cat -n maim.go
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>cat -n maim.go
 </code></pre></div></div>
 </div>
 </div>
@@ -212,11 +213,11 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><p>统计文件行、单词、字符数量
 格式：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>usage: wc <span style=color:#f92672>[</span>-clmw<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>file ...<span style=color:#f92672>]</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>usage: wc <span style=color:#f92672>[</span>-clmw<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>file ...<span style=color:#f92672>]</span>
 </code></pre></div><p>统计<code>main.go</code>的行、单词、字符数量</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>wc main.go
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>wc main.go
 </code></pre></div><p>选项：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>-l 统计行数
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>-l 统计行数
 -c 统计字符数
 -w 统计单词数
 -L 统计最长的行的字符数
@@ -230,9 +231,9 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><p>简单的文件传输工具</p>
 <p>接收方</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nc -l <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &gt; filename
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>nc -l <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &gt; filename
 </code></pre></div><p>发送方</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nc <span style=color:#f92672>[</span>ip<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &lt; filename
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>nc <span style=color:#f92672>[</span>ip<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &lt; filename
 </code></pre></div></div>
 </div>
 </div>
