deploy: fd79970c4d5e52af8f6efc1a5319730e126da497

--- a/notes/linux/shell/basic/index.html
+++ b/notes/linux/shell/basic/index.html
@@ -244,8 +244,20 @@ Ormissia's Blog</a>
 <div class=card>
 <div class=card-body><p>解压<code>*.gz</code>的压缩文件</p>
 <p>与<code>*.tar.gz</code>文件不同，<code>*.gz</code>文件需要用<code>gzip</code>来解压</p>
-<pre><code>gzip -d filename
-</code></pre></div>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>gzip -d filename
+</code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>hostnamectl</span></h5>
+<div class=card>
+<div class=card-body><p>修改<code>hostname</code>，重启也生效</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>hostnamectl set-hostname CentOS
+</code></pre></div><p>查看<code>hostname</code></p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>hostname
+</code></pre></div></div>
 </div>
 </div>
 </div>
