--- a/notes/linux/shell/script/index.html
+++ b/notes/linux/shell/script/index.html
@@ -270,6 +270,158 @@ Ormissia's Blog</a>
 </div>
 </div>
 </div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>变量作用范围</span></h5>
+<div class=card>
+<div class=card-body><ul>
+<li>局部变量
+<ul>
+<li>新定义的变量默认只在当前Shell环境中有效，无法在子Shell环境中使用</li>
+</ul>
+</li>
+<li>全局变量
+<ul>
+<li>全局变量在当前Shell及子Shell中均有效，定义格式：<code>export a=1</code></li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>数学运算</span></h5>
+<div class=card>
+<div class=card-body><p>整数运算</p>
+<p>使用<code>$[]</code>或<code>$(())</code>表达式</p>
+<p>格式：$[整数1 运算符 整数2]</p>
+</div>
+</div>
+<div class=card>
+<div class=card-body><p>小数运算</p>
+<p>Bash内建机制仅支持整数运算，不支持小数运算
+可以通过计算器软件<code>bc</code>实现小数计算</p>
+<p>如果没有该软件需要使用<code>yum</code>安装
+<code>bc</code>支持交互式和非交互式两种方式计算，<code>scale=n</code>可以约束小数位</p>
+<p><code>bc</code>也支持比较操作：
+<code>>,>=,&lt;,&lt;=,==,!=</code>
+表达式成立返回<code>1</code>，否则返回<code>0</code></p>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>字符串</span></h5>
+<div class=card>
+<div class=card-body><p>字符串比较</p>
+<p><em>中括号与字符串之间和运算符与字符串之间均有有个空格</em><br>
+是否为空：<code>[ -z 字符串 ]</code><br>
+等于：<code>[ 字符串1 == 字符串2 ]</code><br>
+不等于：<code>[ 字符串1 ！= 字符串2 ]</code></p>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>整数值比较</span></h5>
+<div class=card>
+<div class=card-body><p><code>[ 整数值1 操作符 整数值2 ]</code></p>
+<p>-eq 等于（equal）
+-ne 不等于（not equal）
+-ge 大于等于（greater or equal）
+-le 小于等于（less or equal）
+-gt 大于（greater than）
+-lt 小于（less than）</p>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>文件状态测试</span></h5>
+<div class=card>
+<div class=card-body><p><code>[ 操作符 文件或目录 ]</code></p>
+<p>-e 判断对象是否存在（exit）
+-d 判断对象是否为目录（directory）
+-f 判断对象是否为一般文件（file）
+-r 判断对象是否有可读权限（read）
+-w 判断对象是否有可写权限（write）
+-x 判断对象是否有可执行权限（excute）</p>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>组合多个命令</span></h5>
+<div class=card>
+<div class=card-body><code>;</code>：顺序执行
+<code>||</code>：前面执行失败继续执行
+<code>&&</code>：前面执行成功继续执行</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>数组</span></h5>
+<div class=card>
+<div class=card-body><p>存储多个数据的集合</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>test<span style=color:#f92672>=(</span><span style=color:#ae81ff>1</span> <span style=color:#ae81ff>2</span> 3<span style=color:#f92672>)</span>
+echo <span style=color:#e6db74>${</span>test[0]<span style=color:#e6db74>}</span>
+</code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>函数</span></h5>
+<div class=card>
+<div class=card-body><p>语法格式</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell><span style=color:#66d9ef>function</span> 函数名<span style=color:#f92672>{</span>
+  <span style=color:#75715e>#命令序列</span>
+<span style=color:#f92672>}</span>
+</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>函数名<span style=color:#f92672>(){</span>
+  <span style=color:#75715e>#命令序列</span>
+<span style=color:#f92672>}</span>
+</code></pre></div></div>
+</div>
+<div class=card>
+<div class=card-body><p>调用</p>
+<p><code>函数名 参数1 参数2 ...</code>
+传递的值作为函数的位置参数</p>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>中断与退出</span></h5>
+<div class=card>
+<div class=card-body><code>continue</code>：结束单次循环
+<code>break</code>：跳出循环体
+<code>exit</code>：退出脚本</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>子串截取</span></h5>
+<div class=card>
+<div class=card-body><p><code>${变量:起始位置:长度}</code></p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>ab<span style=color:#f92672>=</span><span style=color:#ae81ff>123456</span>
+<span style=color:#75715e># 统计ab长度</span>
+echo <span style=color:#e6db74>${#</span>ab<span style=color:#e6db74>}</span>
+<span style=color:#75715e># 输出：6</span>
+echo <span style=color:#e6db74>${</span>ab:2:5<span style=color:#e6db74>}</span>
+<span style=color:#75715e># 输出：3456</span>
+</code></pre></div></div>
+</div>
+</div>
+</div>
 </div>
 </div>
 </section>
